--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -6,21 +6,13 @@
   </div>
   <div class="side-menu-wrapper">
     <div class="side-menu nav scroller">
-      <a class="sidebar-link sidebar-toggler" href="javascript:;">
+      <a class="sidebar-link sidebar-toggler" href="#sidemenu-1">
         <div class="sidebar-toggler-icon">
           <span class="icon-line"></span>
           <span class="icon-line"></span>
           <span class="icon-line"></span>
         </div>
       </a>
-      <a class="sidebar-link active" href="#sidemenu-1" data-toggle="tab" aria-expanded="true"><i class="ti-briefcase"></i>
-        <span class="badge-success badge-point" style="position:absolute; right: 20px; top: 5px;">2</span>
-      </a>
-      <a class="sidebar-link" href="#sidemenu-2" data-toggle="tab"><i class="ti-shopping-cart"></i></a>
-      <a class="sidebar-link" href="#sidemenu-1"><i class="ti-support"></i>
-        <span class="badge badge-pink badge-circle" style="position:absolute; right: 20px; top: 5px;">8</span>
-      </a>
-      <a class="sidebar-link" href="#sidemenu-3" data-toggle="tab"><i class="ti-settings"></i></a>
     </div>
   </div>
 </nav>
